--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-    "name": "CodiMD",
-    "id": "codimd",
+    "name": "darkwire",
+    "id": "darkwire",
     "packaging_format": 1,
     "description": {
         "en": "Collaborative editor to work on notes written in Markdown",
         "fr": "Éditeur collaboratif pour travailler sur des notes en Markdown"
     },
-    "version": "1.6.0~ynh3",
-    "url": "https://github.com/codimd/server",
+    "version": "2.0.0~ynh3",
+    "url": "https://github.com/darkwire/darkwire.io",
     "license": "AGPL-3.0-only",
     "maintainer": {
-        "name": "liberodark"
+        "name": ""
     },
     "requirements": {
         "yunohost": ">= 3.8.1"
@@ -25,10 +25,20 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for CodiMD",
-                    "fr": "Choisissez un nom de domaine pour CodiMD"
+                    "en": "Choose a domain name for darkwire",
+                    "fr": "Choisissez un nom de domaine pour darkwire"
                 },
-                "example": "codimd.domain.org"
+                "example": "domain.org"
+            },
+            {
+                "name": "path",
+                "type": "path",
+                "ask": {
+                    "en": "Choose a path for darkwire",
+                    "fr": "Choisissez un chemin pour darkwire"
+                },
+                "example": "/darkwire",
+                "default": "/darkwire"
             },
             {
                 "name": "is_public",
@@ -38,8 +48,8 @@
                     "fr": "Est-ce un site public ?"
                 },
                 "help": {
-                    "en": "If enabled, CodiMD will be accessible by people who do not have an account. This can be changed later via the webadmin.",
-                    "fr": "Si cette case est cochée, CodiMD sera accessible aux personnes n’ayant pas de compte. Vous pourrez changer ceci plus tard via la webadmin."
+                    "en": "If enabled, darkwire will be accessible by people who do not have an account. This can be changed later via the webadmin.",
+                    "fr": "Si cette case est cochée, darkwire sera accessible aux personnes n’ayant pas de compte. Vous pourrez changer ceci plus tard via la webadmin."
                 },
                 "default": true
             }
